assets/apps/calendar/css/default.css
body {
  font-size: 12px;
}

/**  custom bootstrap - start */
.btn {
  border-radius: 25px;
  border-color: #ddd;
}

.btn:hover {
  border: solid 1px #bbb;
  background-color: #fff;
}

.btn:active {
  background-color: #f9f9f9;
  border: solid 1px #bbb;
  outline: none;
}

.btn:disabled {
  background-color: #f9f9f9;
  border: solid 1px #ddd;
  color: #bbb;
}

.btn:focus:active, .btn:focus, .btn:active {
  outline: none;
}

.open > .dropdown-toggle.btn-default {
  background-color: #fff;
}

.dropdown-menu {
  top: 25px;
  padding: 3px 0;
  border-radius: 2px;
  border: 1px solid #bbb;
}

.dropdown-menu > li > a {
  padding: 9px 12px;
  cursor: pointer;
}

.dropdown-menu > li > a:hover {
  background-color: rgba(81, 92, 230, 0.05);
  color: #333;
}

.bi15 {
  width: 15px;
  height: 15px;
}
/** custom fontawesome - end */

.calendar-icon {
  width: 14px;
  height: 14px;
}

#top {
  height: 49px;
  border-bottom: 1px solid #bbb;
  padding: 16px;
  font-size: 10px;
}

#lnb {
  position: absolute;
  width: 200px;
  top: 0px;
  bottom: 0;
  border-right: 1px solid #d5d5d5;
  padding: 12px 10px;
  background: #fafafa;
}

#right {
  position: absolute;
  left: 0px;
  top: 0px;
  right: 0;
  bottom: 0;
}

#lnb label {
  margin-bottom: 0;
  cursor: pointer;
}

.lnb-new-schedule {
  padding-bottom: 12px;
  border-bottom: 1px solid #e5e5e5;
}

.lnb-new-schedule-btn {
  height: 100%;
  font-size: 14px;
  background-color: #ff6618;
  color: #ffffff;
  border: 0;
  border-radius: 25px;
  padding: 10px 20px;
  font-weight: bold;
}

.lnb-new-schedule-btn:hover {
  height: 100%;
  font-size: 14px;
  background-color: #e55b15;
  color: #ffffff;
  border: 0;
  border-radius: 25px;
  padding: 10px 20px;
  font-weight: bold;
}

.lnb-new-schedule-btn:active {
  height: 100%;
  font-size: 14px;
  background-color: #d95614;
  color: #ffffff;
  border: 0;
  border-radius: 25px;
  padding: 10px 20px;
  font-weight: bold;
}

.lnb-calendars > div {
  padding: 12px 16px;
  border-bottom: 1px solid #e5e5e5;
  font-weight: normal;
}

.lnb-calendars-d1 {
  padding-left: 8px;
}

.lnb-calendars-d1 label {
  font-weight: normal;
}

.lnb-calendars-item {
  min-height: 14px;
  line-height: 14px;
  padding: 8px 0;
}

.lnb-footer {
  color: #999;
  font-size: 11px;
  position: absolute;
  bottom: 12px;
  padding-left: 16px;
}

#menu {
  padding: 5px;
}

#dropdownMenu-calendarType {
  padding: 0 8px 0 11px;
}

#calendarTypeName {
  min-width: 42px;
  display: inline-block;
  text-align: left;
  line-height: 30px;
}

.move-today {
  padding: 0 5px;
  line-height: 30px;
}

.move-day {
  padding: 8px;
  font-size: 0;
}

#renderRange {
  padding-left: 12px;
  font-size: 19px;
  vertical-align: middle;
}

.dropdown-menu-title .calendar-icon {
  margin-right: 8px;
}

.calendar-bar {
  width: 16px;
  height: 16px;
  margin-right: 5px;
  display: inline-block;
  border: 1px solid #eee;
  vertical-align: middle;
}

.calendar-name {
    font-size: 14px;
    font-weight: bold;
    vertical-align: middle;
}

.schedule-time {
    color: #005aff;
}

#calendar {
    position: absolute;
    left: 0;
    right: 0;
    bottom: 5px;
    top: 64px;
}

/** custom fontawesome */
.fa {
    width: 12px;
    height: 12px;
    margin-right: 2px;
}

.weekday-grid-more-schedules {
  float: right;
  margin-top: 4px;
  margin-right: 6px;
  height: 18px;
  line-height: 17px;
  padding: 0 5px;
  border-radius: 3px;
  border: 1px solid #ddd;
  font-size: 12px;
  text-align: center;
  color: #000;
}

/** icons.css **/
.calendar-icon {
  width: 14px;
  height: 14px;
  display: inline-block;
  vertical-align: middle;
}

.calendar-font-icon {
  font-family: 'tui-calendar-font-icon';
  font-size: 10px;
  font-weight: normal;
}

.img-bi {
  background: url('../images/img-bi.png') no-repeat;
  width: 215px;
  height: 16px;
}

.ic_view_month {
  background: url('../images/ic-view-month.png') no-repeat;
}

.ic_view_week {
  background: url('../images/ic-view-week.png') no-repeat;
}

.ic_view_day {
  background: url('../images/ic-view-day.png') no-repeat;
}

.ic-arrow-line-left {
  background: url('../images/ic-arrow-line-left.png') no-repeat;
}

.ic-arrow-line-right {
  background: url('../images/ic-arrow-line-right.png') no-repeat;
}

.ic-travel-time {
  background: url('../images/ic-traveltime-w.png') no-repeat;
}

/* tui-calendar.css */
/*!
 * TOAST UI Calendar
 * @version 1.12.13 | Tue Apr 28 2020
 * @author NHN FE Development Lab <dl_javascript@nhn.com>
 * @license MIT
 */
.tui-full-calendar-layout {
  height: 100%;
  position: relative;
  box-sizing: border-box;
}
.tui-full-calendar-layout * {
  box-sizing: border-box;
}
.tui-full-calendar-dragging {
  cursor: move;
}
.tui-full-calendar-resizing {
  cursor: row-resize;
}
.tui-full-calendar-resizing-x {
  cursor: col-resize;
}
.tui-full-calendar-hidden {
  display: none !important;
}
.tui-full-calendar-invisible span {
  visibility: hidden;
}
.tui-full-calendar-clear {
  zoom: 1;
}
.tui-full-calendar-clear:after {
  content: '';
  display: block;
  clear: both;
}
.tui-full-calendar-scroll-y {
  overflow-y: scroll;
}
.tui-full-calendar-dot {
  display: inline-block;
  position: relative;
  top: -1px;
  content: '';
  width: 7px;
  height: 7px;
  border-radius: 50%;
}
.tui-full-calendar-holiday {
  color: #f00;
}
.tui-full-calendar-today {
  background: rgba(218,229,249,0.3);
}
.handle-x {
  background-position: center center;
  background-repeat: no-repeat;
  background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAgAAAAECAMAAACEE47CAAAACVBMVEX///////////+OSuX+AAAAA3RSTlMrQJG5H4EIAAAAEUlEQVR4AWNgYoRABhjEFAEAArQAIcHQcPsAAAAASUVORK5CYII=);
}
.handle-y {
  background-position: center center;
  background-repeat: no-repeat;
  background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAICAMAAADp7a43AAAACVBMVEX///////////+OSuX+AAAAA3RSTlMrQJG5H4EIAAAAEUlEQVR4AWNgYmRiZABB/CwAAtgAIUTUNkMAAAAASUVORK5CYII=);
}
/* ... */

